refactor(buildsystem): extract ProcessExecutor and add unit tests